# audio_notes

./: .gitattributes  .gitignore  Anthropic_MCP_with_Ollama_No_Claude_Watch_This.md  Luffa_moment_of_truth_the_peel.md  README.md  bash.txt  mp32o.sh  process_playlist.sh  pyproject.toml  test.py  yt2o.sh  yt2o_gitbash.sh
output/: Fusion_360_Trick_To_Find_What_Needs_A_Dimension_Dragging_Blue_Entities_fusion360.info.json  Fusion_360_Trick_To_Find_What_Needs_A_Dimension_Dragging_Blue_Entities_fusion360.json  Gemini_Exp_1114_-_The_BEST_LLM_Ever_Beats_o1-Preview_+_Claude_3.5_Sonnet_Fully_Tested.info.json  Gemini_Exp_1114_-_The_BEST_LLM_Ever_Beats_o1-Preview_+_Claude_3.5_Sonnet_Fully_Tested.json  How_do_Microbes_Fungi_help_your_grow_w_Dr._Colin_Bell_MiiM_Horticulture.info.json  How_do_Microbes_Fungi_help_your_grow_w_Dr._Colin_Bell_MiiM_Horticulture.json  IPM_Saul_Alba_BioBee_Jan_9_2025.json  Less_Work_More_Food_a_Half_Tonne_in_2024_from_60_m2.info.json  Less_Work_More_Food_a_Half_Tonne_in_2024_from_60_m2.json
src/create_obsidian_note/: Episode_4_-_Interview_with_David_Bernard_Perron.info.json  Episode_4_-_Interview_with_David_Bernard_Perron.json  Episode_4_-_Interview_with_David_Bernard_Perron.md  cli.py  note_creator.py
transcripts/: IPM_Saul_Alba_BioBee_Jan_9_2025.md  Less_Work_More_Food_a_Half_Tonne_in_2024_from_60_m2.md
